Se quitó el texto de prueba en los distintos parrafos que contentian dia, mes y annio

--- a/practicaDOM/index.html
+++ b/practicaDOM/index.html
@@ -13,19 +13,19 @@
     <main class="container d-flex justify-content-center align-items-center">
         <section class="mt-5 w-75" id="mainContainer">
             <article class="d-flex justify-content-around dateTitle flex-wrap">
-                <p id="dayWeek">Jueves</p>
-                <p id="numberDay">4</p>
+                <p id="dayWeek"></p>
+                <p id="numberDay"></p>
                 <p>de</p>
-                <p id="month">Febrero</p>
+                <p id="month"></p>
                 <p>del</p>
-                <p id="year">2020</p>
+                <p id="year"></p>
             </article>
             <article class="d-flex justify-content-around hourTitle">
-                <p id="hours">06</p>
+                <p id="hours"></p>
                 <p>:</p>
-                <p id="minutes">30</p>
+                <p id="minutes"></p>
                 <p>:</p>
-                <p id="seconds">17</p>
+                <p id="seconds"></p>
             </article>
             <article class="text-center">
                 <button class="btn clock-button btn-green" onclick="changeColor('green')"></button>
