--- a/06-eventos/index.html
+++ b/06-eventos/index.html
@@ -26,16 +26,12 @@
                 <form>
                     <div class="mb-3">
                         <label class="form-label">Nombre y Apellido</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Juan Perez">
-                        <!--
+                        <input type="text" class="form-control" id="name" placeholder="Juan Perez" onblur="requiredField()">
                         <div class="valid-feedback">
                             <p>Ingreso correcto de datos</p>
-                        //La clase que debe ir en el input es 'is-valid'
                         </div>
-                        -->
                         <div class="invalid-feedback">
                             <p>Debe ingregresar nombre y apellido</p>
-                            <!--La clase que debe ir en input es 'is-invalid'-->
                         </div>
                     </div>
                     <div class="mb-3">
@@ -47,21 +43,21 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" id="telefono" placeholder="3816703322">
+                        <input type="number" class="form-control" id="phone" placeholder="3816703322">
                         <div class="invalid-feedback">
                             <p>Debe ingresar un número de teléfono</p>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Consulta</label>
-                        <textarea type="text" class="form-control" id="consulta" placeholder="Ingrese su consulta"></textarea>  
+                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta"></textarea>  
                         <div class="invalid-feedback">
                             <p>Debe ingresar una consulta de al menos 10 caracteres</p>
                         </div>
                     </div>
                     <div class="mb-3">
                         <div class="form-check">
-                            <input type="checkbox" id="terminos" class="form-check-input">
+                            <input type="checkbox" id="terms" class="form-check-input">
                             <label  class="input-form-check-label">Está de acuerdo con lo términos y condiciones</label>
                             <div class="invalid-feedback">
                                 <p>Debe aceptar los términos y condiciones</p>
