se trabajo sobre la validacion de los campos email y numero de telefono dentro del formulario

--- a/06-eventos/index.html
+++ b/06-eventos/index.html
@@ -26,7 +26,7 @@
                 <form>
                     <div class="mb-3">
                         <label class="form-label">Nombre y Apellido</label>
-                        <input type="text" class="form-control" id="name" placeholder="Juan Perez" onblur="requiredField()">
+                        <input type="text" class="form-control" id="name" placeholder="Juan Perez" onblur="requiredField(this)">
                         <div class="valid-feedback">
                             <p>Ingreso correcto de datos</p>
                         </div>
@@ -36,21 +36,21 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" placeholder="juanperezok@gmail.com">
+                        <input type="email" class="form-control" id="email" placeholder="juanperezok@gmail.com" onblur="validateEmail(this)">
                         <div class="invalid-feedback">
                             <p>Debe ingresar un e-mail válido</p>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" id="phone" placeholder="3816703322">
+                        <input type="number" class="form-control" id="phone" placeholder="3816703322" onblur="validateNumber(this)">
                         <div class="invalid-feedback">
                             <p>Debe ingresar un número de teléfono</p>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Consulta</label>
-                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta"></textarea>  
+                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta" onblur="requiredField(this)"></textarea>  
                         <div class="invalid-feedback">
                             <p>Debe ingresar una consulta de al menos 10 caracteres</p>
                         </div>
