se agregó la validación del textarea

--- a/06-eventos/index.html
+++ b/06-eventos/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Consulta</label>
-                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta" onblur="requiredField(this)"></textarea>  
+                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta" onblur="validateConsult(this)"></textarea>  
                         <div class="invalid-feedback">
                             <p>Debe ingresar una consulta de al menos 10 caracteres</p>
                         </div>
