--- a/07-CatalogoFuncopop/admin.html
+++ b/07-CatalogoFuncopop/admin.html
@@ -47,7 +47,8 @@
                     <button class="btn btn-primary" id="addButton" data-bs-toggle="modal" data-bs-target="#productModal">Agregar</button>
                 </div>
             </div>
-            <table class="table table-striped">
+            <div class="table-responsive">
+              <table class="table table-striped">
                 <thead>
                     <tr>
                       <th scope="col">#</th>
@@ -74,6 +75,7 @@
                     </tr>
                   </tbody>    
             </table>
+            </div>
         </section>
     </main>
     <!-- Modal Funkopop-->
@@ -82,33 +84,53 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Agregar producto</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" id="productCode" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form id="funkopopForm">
-              <div class="mb-3">
+          <form id="funkopopForm" onsubmit="addFunkopop(event)">
+              <div class="mb-3"> <!--Product Code Number-->
                   <label for="" class="form-label">#</label>
-                  <input type="text" id="productCode" class="form-control" placeholder="1">
+                  <input type="text" id="productCode" class="form-control" placeholder="1" onblur="validateProductCode(this)">
+                  <div class="valid-feedback"></div>
+                <div class="invalid-feedback">
+                  Debe ingresar un número válido
+                </div>
               </div>
-              <div class="mb-3">
+              <div class="mb-3"> <!--Product Name-->
                 <label for="" class="form-label">Nombre</label>
-                <input type="text" id="productName" class="form-control" placeholder="Batman">
+                <input type="text" id="productName" class="form-control" placeholder="Batman" onblur="validateProuctName(this)">
+                <div class="valid-feedback"></div>
+                <div class="invalid-feedback">
+                  Debe ingresar un nombre válido
+                </div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3"> <!--Product Serial Number-->
                 <label for="" class="form-label">Número de serie</label>
-                <input type="text" id="serialNumber" class="form-control" placeholder="dc3421">
+                <input type="text" id="serialNumber" class="form-control" placeholder="dc3421" onblur="validateProductSerialNumber(this)">
+                <div class="valid-feedback"></div>
+                <div class="invalid-feedback">
+                  Debe ingresar un número de serie válido
+                </div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3"> <!--Product Category-->
                 <label for="" class="form-label">Categoría</label>
-                <input type="text" id="cathegory" class="form-control" placeholder="DC">
+                <input type="text" id="category" class="form-control" placeholder="DC" onblur="validateProductCategory(this)">
+                <div class="valid-feedback"></div>
+                <div class="invalid-feedback">
+                  Debe ingresar una categoría válida
+                </div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3"> <!--Product Description-->
                 <label for="" class="form-label">Descripción</label>
                 <textarea id="description" rows="3" class="form-control" placeholder="Caballero de la noche"></textarea>
             </div>
-            <div class="mb-3">
+            <div class="mb-3"> <!--Product Image-->
                 <label for="" class="form-label">Imagen</label>
-                <input type="text" id=Image class="form-control" placeholder="Agregar imagen">
+                <input type="text" id=image class="form-control" placeholder="Agregar imagen" onblur="validateProductImage(this)">
+                <div class="valid-feedback"></div>
+                <div class="invalid-feedback">
+                  Solo se permiten archivos de tipo: JPG, JPEG y PNG
+                </div>
             </div>
             <button class="btn btn-primary" type="submit">Guardar</button>
           </form>
@@ -123,6 +145,7 @@
         <p>&copy; Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/admin.js"></script>
+    <script src="js/validations.js"></script>
 </body>
 </html>
