Se movió de lugar la carpeta del catalogo funkopop trabajda en clase y se creo una nueva para reforzar la practica, La misma cuenta con el maquetado inicial del index.html y recursos como imágenes y estilos de bootstrap.

--- a/07-CatalogoFunkopop/index.html
+++ b/07-CatalogoFunkopop/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="kwywords" content="local storage">
     <meta name="author" content="Marcos Ezequiel Herrera">
+    <!-- Hojas de estilos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Ícono -->
+    <link rel="shortcut icon" href="./img/database-storage.ico" type="image/x-icon">
     <title>Catálogo Funkopop</title>
 </head>
 <body>
@@ -21,10 +24,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.hmtl">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="admin.html">Admin</a>
                   </li>
                 </ul>
                 
