--- a/07-CatalogoFunkopop/index.html
+++ b/07-CatalogoFunkopop/index.html
@@ -15,9 +15,10 @@
 </head>
 <body>
     <header>
+      <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">Funkopop</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,7 +35,35 @@
                 </form>
               </div>
             </div>
-          </nav>
+        </nav>
+        <!-- SLIDER -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/game-of-thrones.jpg" class="d-block w-100" alt="Funkopop de Games of thrones">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/batman.jpg" class="d-block w-100" alt="Funkopop de Batman">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/lossimpsons.jpg" class="d-block w-100" alt="Funkpop de Los Simpsons">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+          
     </header>
     <main></main>
     <footer class="bg-dark text-light py-4 text-center">
