--- a/06-eventos/index.html
+++ b/06-eventos/index.html
@@ -1,88 +1,136 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcos E. Herrera">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-    <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Marcos E. Herrera" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
+    ></script>
     <script type="text/javascript">
-        (function() {
+      (function () {
         emailjs.init("user_nC9AZY0jzcM3ENY164iuV");
-        })();
-</script>
+      })();
+    </script>
     <title>Formulario - Eventos</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar bg-dark navbar-dark">
-            <div class="container">
-                <span class="navbar-brand">Validacionn JS</span>
-            </div>
-            
-        </nav>
+      <nav class="navbar bg-dark navbar-dark">
+        <div class="container">
+          <span class="navbar-brand">Validacionn JS</span>
+        </div>
+      </nav>
     </header>
     <main class="container">
-        <section class="card my-5 border-dark">
-            <div class="card-header bg-dark text-light">
-                <h5>Formulario de suscripción</h5>
+      <section class="card my-5 border-dark">
+        <div class="card-header bg-dark text-light">
+          <h5>Formulario de suscripción</h5>
+        </div>
+        <div class="card-body">
+          <form id="suscriptionForm" onsubmit="generalValidation(event)">
+            <div class="mb-3">
+              <!--Nombre y Apellido-->
+              <label class="form-label">Nombre y Apellido</label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="Juan Perez"
+                onfocus="clearAlertStyles(this)"
+                onblur="requiredField(this)"
+                required
+              />
+              <div class="valid-feedback">
+                <p>Ingreso correcto de datos</p>
+              </div>
+              <div class="invalid-feedback">
+                <p>Debe ingregresar nombre y apellido</p>
+              </div>
             </div>
-            <div class="card-body">
-                <form id='suscriptionForm' onsubmit="generalValidation(event)">
-                    <div class="mb-3"> <!--Nombre y Apellido-->
-                        <label class="form-label">Nombre y Apellido</label>
-                        <input type="text" class="form-control" id="name" placeholder="Juan Perez" onfocus="clearAlertStyles(this)" onblur="requiredField(this)" required>
-                        <div class="valid-feedback">
-                            <p>Ingreso correcto de datos</p>
-                        </div>
-                        <div class="invalid-feedback">
-                            <p>Debe ingregresar nombre y apellido</p>
-                        </div>
-                    </div>
-                    <div class="mb-3"> <!--E-mail-->
-                        <label class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" placeholder="juanperezok@gmail.com" onfocus="clearAlertStyles(this)" onblur="validateEmail(this)" required>
-                        <div class="invalid-feedback">
-                            <p>Debe ingresar un e-mail válido</p>
-                        </div>
-                    </div>
-                    <div class="mb-3"><!--Teléfono-->
-                        <label class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" id="phone" placeholder="3816703322" onfocus="clearAlertStyles(this)" onblur="validateNumber(this)" required>
-                        <div class="invalid-feedback">
-                            <p>Debe ingresar un número de teléfono</p>
-                        </div>
-                    </div>
-                    <div class="mb-3"><!--Consulta-->
-                        <label class="form-label">Consulta</label>
-                        <textarea type="text" class="form-control" id="consult" placeholder="Ingrese su consulta" onfocus="clearAlertStyles(this)" onblur="validateConsult(this)" required></textarea>
-                        <div class="invalid-feedback">
-                            <p>Debe ingresar una consulta de al menos 10 caracteres</p>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <div class="form-check"><!--Términos y condiciones-->
-                            <input type="checkbox" id="terms" class="form-check-input">
-                            <label  class="input-form-check-label">Está de acuerdo con lo términos y condiciones</label>
-                            <div class="invalid-feedback">
-                                <p>Debe aceptar los términos y condiciones</p>
-                            </div>
-                            <div class="valid-feedback"></div>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary" type="submit">Enviar</button>
-                    <div class="mt-1">* Todos los campos son obligatorios.</div>
-                </form>
-                <div id="alert" role="alert">
-                    
-                  </div>
+            <div class="mb-3">
+              <!--E-mail-->
+              <label class="form-label">E-mail</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="juanperezok@gmail.com"
+                onfocus="clearAlertStyles(this)"
+                onblur="validateEmail(this)"
+                required
+              />
+              <div class="invalid-feedback">
+                <p>Debe ingresar un e-mail válido</p>
+              </div>
             </div>
-        </section>
+            <div class="mb-3">
+              <!--Teléfono-->
+              <label class="form-label">Teléfono</label>
+              <input
+                type="number"
+                class="form-control"
+                id="phone"
+                placeholder="3816703322"
+                onfocus="clearAlertStyles(this)"
+                onblur="validateNumber(this)"
+                required
+              />
+              <div class="invalid-feedback">
+                <p>Debe ingresar un número de teléfono</p>
+              </div>
+            </div>
+            <div class="mb-3">
+              <!--Consulta-->
+              <label class="form-label">Consulta</label>
+              <textarea
+                type="text"
+                class="form-control"
+                id="consult"
+                placeholder="Ingrese su consulta"
+                onfocus="clearAlertStyles(this)"
+                onblur="validateConsult(this)"
+                required
+              ></textarea>
+              <div class="invalid-feedback">
+                <p>Debe ingresar una consulta de al menos 10 caracteres</p>
+              </div>
+            </div>
+            <div class="mb-3">
+              <div class="form-check">
+                <!--Términos y condiciones-->
+                <input type="checkbox" id="terms" class="form-check-input" />
+                <label class="input-form-check-label"
+                  >Está de acuerdo con lo términos y condiciones</label
+                >
+                <div class="invalid-feedback">
+                  <p>Debe aceptar los términos y condiciones</p>
+                </div>
+                <div class="valid-feedback"></div>
+              </div>
+            </div>
+            <button class="btn btn-primary" type="submit">Enviar</button>
+            <div class="mt-1">* Todos los campos son obligatorios.</div>
+          </form>
+          <div id="alert" role="alert"></div>
+        </div>
+      </section>
     </main>
     <footer></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
