--- a/07-CatalogoFunkopop/admin.html
+++ b/07-CatalogoFunkopop/admin.html
@@ -115,16 +115,18 @@
           </div>
           <div class="modal-body">
             <form id="funkopopForm" onsubmit="addFunkopop(event)">
-                <div class="mb-3"> <!--Product Code Number-->
+                <div class="mb-3"> <!--Product Code-->
                     <label for="" class="form-label">Código</label>
-                    <input type="text" 
+                    <input 
+                    type="number" 
                     id="productCode" 
                     class="form-control" 
                     placeholder="001" 
-                    onblur="validateProductCode(this)">
+                    onblur="validateProductCode(this)" 
+                    required>
                     <div class="valid-feedback"></div>
                   <div class="invalid-feedback">
-                    Debe ingresar un número válido
+                    <p>Debe ingresar un número válido</p>
                   </div>
                 </div>
                 <div class="mb-3"> <!--Product Name-->
@@ -134,24 +136,26 @@
                   id="productName" 
                   class="form-control" 
                   placeholder="Batman" 
-                  onblur="validateProuctName(this)">
+                  onblur="validateProductName(this)" 
+                  required>
                   <div class="valid-feedback"></div>
                   <div class="invalid-feedback">
-                    Debe ingresar un nombre válido
+                    <p>Ingresar un nombre válido</p>
                   </div>
               </div>
               <div class="mb-3"> <!--Product Serial Number-->
                   <label for="" class="form-label">Número de serie</label>
                   <input 
-                  type="text" 
+                  type="number" 
                   id="serialNumber" 
                   class="form-control" 
                   placeholder="dc3421" 
-                  onblur="validateProductSerialNumber(this)">
+                  onblur="validateProductSerialNumber(this)"
+                  required>
                   <div class="valid-feedback"></div>
                   <div class="invalid-feedback">
-                    Debe ingresar un número de serie válido
-                  </div>
+                    <p>Debe ingresar un número de serie válido</p>
+                </div>
               </div>
               <div class="mb-3"> <!--Product Category-->
                   <label for="" class="form-label">Categoría</label>
@@ -160,7 +164,8 @@
                   id="category" 
                   class="form-control" 
                   placeholder="DC" 
-                  onblur="validateProductCategory(this)">
+                  onblur="validateProductCategory(this)"
+                  required>
                   <div class="valid-feedback"></div>
                   <div class="invalid-feedback">
                     Debe ingresar una categoría válida
@@ -177,7 +182,12 @@
               </div>
               <div class="mb-3"> <!--Product Image-->
                   <label for="" class="form-label">Imagen</label>
-                  <input type="text" id=image class="form-control" placeholder="Agregar imagen" onblur="validateProductImage(this)">
+                  <input 
+                  type="text" 
+                  id=image 
+                  class="form-control" 
+                  placeholder="Agregar imagen" 
+                  onblur="validateProductImage(this)">
               </div>
               <!-- Botón de guardar-->
               <button 
@@ -196,6 +206,7 @@
         <p>&copy; Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.module.dev.js"></script>
+    <script src="js/validations.dev.js"></script>
 </body>
 </html>
