En admin.html se acomodo el textarea para que muestre el placeholder y se corrigieron errores de sintaxis. Ademas se cambio la forma de validar en el archivo validations.js usando un objeto para llevar a cabo la tarea.

--- a/07-CatalogoFunkopop/admin.html
+++ b/07-CatalogoFunkopop/admin.html
@@ -177,8 +177,7 @@
                   id="description" 
                   rows="3" 
                   class="form-control" 
-                  placeholder="Caballero de la noche">
-                </textarea>
+                  placeholder="Caballero de la noche"></textarea>
               </div>
               <div class="mb-3"> <!--Product Image-->
                   <label for="" class="form-label">Imagen</label>
@@ -187,10 +186,11 @@
                   id=image 
                   class="form-control" 
                   placeholder="Agregar imagen" 
-                  onblur="validateProductImage(this)">
+                  >
               </div>
               <!-- Botón de guardar-->
               <button 
+                id="addButton"
                 class="btn btn-primary" 
                 type="submit">
                 Guardar
