--- a/07-CatalogoFunkopop/admin.html
+++ b/07-CatalogoFunkopop/admin.html
@@ -206,7 +206,6 @@
         <p>&copy; Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script type="module" src="js/app.module.dev.js"></script>
-    <script src="js/validations.dev.js"></script>
+    <script type="" src="js/app.module.dev.js"></script>
 </body>
 </html>
