--- a/07-CatalogoFunkopop/admin.html
+++ b/07-CatalogoFunkopop/admin.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Ícono -->
     <link rel="shortcut icon" href="./img/database-storage.ico" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
     <title>Catálogo Funkopop</title>
 </head>
 <body>
@@ -76,6 +77,7 @@
                     </tr>
                   </thead>
                   <tbody id="funkopopTable">
+                  <!--
                     <tr>
                       <th scope="row">001</th>
                       <td>Batman</td>
@@ -88,6 +90,7 @@
                           <button class="btn btn-danger">Eliminar</button>
                       </td>
                     </tr>
+                  -->
                   </tbody>    
             </table>
             </div>
